syntax = "proto3";

package blipblop.services.events.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "api/types/v1/meta.proto";

option go_package = "github.com/amimof/blipblop/api/services/events/v1;events";

service EventService {
  rpc Subscribe(SubscribeRequest) returns (stream Event) {}
  rpc Publish(PublishRequest) returns (PublishResponse) {}
}

message SubscribeRequest {
  string clientId = 1; 

  // TODO: This is just a placeholder. 
  // Implement something to allow clients to filter which events to listen for using selector
  map<string, string> selector = 2;
}

message Event {
  blipblop.types.v1.Meta meta = 1;
  string objectId = 4;
  string clientId = 5;
  EventType type = 6;
  Operation operation = 7;
  google.protobuf.Any object = 8;
}

enum EventType {
	ContainerCreate = 0;
	ContainerDelete = 1;
  ContainerUpdate = 2;
  ContainerStart = 3;
  ContainerGet = 5;
  ContainerList = 6;
  ContainerKill = 7;
  ContainerStop = 8;
  NodeGet = 9;
  NodeCreate = 10;
  NodeDelete = 11;
  NodeList = 12;
  NodeUpdate = 13;
  NodeJoin = 14;
  NodeForget = 15;
  NodeConnect = 16;
  ContainerSetCreate = 17;
  ContainerSetDelete = 18;
  ContainerSetUpdate = 19;
}

enum Operation {
  Create = 0;
  Update = 1;
  Delete = 3;
  Get = 4;
  List = 5;
  Watch = 6;
}

message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message ListEventRequest {
  map<string, string> selector = 1;
}

message ListEventResponse {
  repeated Event events = 1;
}

message DeleteEventRequest {
  string id = 1;
}

message DeleteEventResponse {
  string id = 1;
}

message PublishRequest {
  Event event = 1;
}

message PublishResponse {
  Event event = 1;
}
